outroTesteVs/force-app/main/default/objects/Turma__c/Turma__c.object-meta.xml
<CustomObject>
    <label>Turma</label>
    <nameField>
        <displayFormat>Tur-{00000}</displayFormat>
        <label>Código Turma</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turmas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>