outroTesteVs/force-app/main/default/objects/Turma__c/fields/Curso__c.field-meta.xml
<CustomField>
    <fullName>Curso__c</fullName>
    <label>Curso</label>
    <length>80</length>
    <type>Text</type>
</CustomField>