outroTesteVs/force-app/main/default/objects/Turma__c/fields/Periodo__c.field-meta.xml
<CustomField>
    <fullName>Periodo__c</fullName>
    <label>Periodo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manhã</fullName>
                <default>true</default>
                <label>Manhã</label>
            </value>
            <value>
                <fullName>Tarde</fullName>
            </value>
            <value>
                <fullName>Noite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>