outroTesteVs/force-app/main/default/objects/Turma__c/fields/Sala__c.field-meta.xml
<CustomField>
    <fullName>Sala__c</fullName>
    <label>Sala</label>
    <referenceTo>Sala__c</referenceTo>
    <relationshipLabel>Turmas</relationshipLabel>
    <relationshipName>Turmas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>