outroTesteVs/force-app/main/default/objects/Turma__c/fields/Semestre__c.field-meta.xml
<CustomField>
    <fullName>Semestre__c</fullName>
    <label>Semestre</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1º</fullName>
                <default>true</default>
                <label>1º</label>
            </value>
            <value>
                <fullName>2º</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>